Se añadio la interfaz grafica de JOPTIONPANE